# zgb-opti

./: .gitignore  FBO_FVG_v2.ex5  FBO_FVG_v2.mq5  README.md  Scalper_v1.ex5  Scalper_v1.mq5  ZGB5_v14_3.mq5  pyproject.toml  run_analyse_xauusd_m1.py  run_combined_risk_stage.py  run_compare_3ea.py  run_compare_btc_xau.py  run_download_btcusd_m1.py  run_download_usousd_m1.py  run_download_xauusd_m1.py  run_dt818_3s_m30xh4_reopt.py  run_dt818_3s_s3_opti.py  run_dt818_bars_sl_opti.py  run_dt818_be_sweep.py  run_dt818_btc_reopt.py  run_dt818_compare_m30xh4_vs_m30.py  run_dt818_compare_prev_new.py  run_dt818_deposit_compare.py  run_dt818_deposit_compare_6pct.py  run_dt818_exp_2s_reopt.py  run_dt818_exp_atr_reopt.py  run_dt818_exp_compare.py  run_dt818_exp_full_reopt.py  run_dt818_exp_h1xh4_reopt.py  run_dt818_exp_m15xm30_reopt.py  run_dt818_exp_m30xh4_reopt.py  run_dt818_exp_risk_compare.py  run_dt818_exp_s3_opti.py  run_dt818_exp_test.py  run_dt818_exp_tf_screen.py  run_dt818_exp_v2_reopt.py  run_dt818_exp_v3_reopt_apr11.py  run_dt818_exp_v3_test.py  run_dt818_full_reopt.py  run_dt818_inv_m5xm15_reopt.py  (+35 more)
configs/: study.example.yaml  study_window_10w.yaml  study_window_2w.yaml  study_window_4w.yaml  study_window_6w.yaml  study_window_8w.yaml
scripts/: sim_check_blockfri.py  sim_combined_oos.py  sim_debug_compare.py  sim_fast_validate.py  sim_parse_mt5_deals.py  sim_s1_scaled_oos.py  sim_sweep_smoke.py  sim_validate.py  sim_wfo.py  sim_wfo_phase_a.py  sim_wfo_phase_b.py  sim_wfo_s2.py
tests/: test_recommender.py  test_research.py  test_robustness.py  test_xml_parser.py
(+88 files in other folders)
